--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jOBRzhyaG_U?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>EverChart</title>
+      <style>
+         .video-container{
+         width: 100vw;
+         height: 100vh;
+         }
+         iframe {
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         width: 100vw;
+         height: 100vh;
+         transform: translate(-50%, -50%);
+         }
+         @media (min-aspect-ratio: 16/9) {
+         .video-container iframe {
+         /* height = 100 * (9 / 16) = 56.25 */
+         height: 56.25vw;
+         }
+         }
+         @media (max-aspect-ratio: 16/9) {
+         .video-container iframe {
+         /* width = 100 / (9 / 16) = 177.777777 */
+         width: 177.78vh;
+         }
+         }
+      </style>
+   </head>
+   <body>
+      <div class="video-container">
+         <iframe src="https://www.youtube.com/embed/jOBRzhyaG_U?controls=0&autoplay=1" title="EverChart" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </body>
+   </div>
 </html>
