--- a/index.html
+++ b/index.html
@@ -5,45 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>EverChart</title>
-        <style>
-            body,
-            html {
-                margin: 0px;
-                overflow: hidden;
-            }
-            .video-background {
-                position: relative;
-                overflow: hidden;
-                width: 100vw;
-                height: 100vh;
-            }
-
-            .video-background iframe {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 100vw;
-                height: 100vh;
-                transform: translate(-50%, -50%);
-            }
-
-            @media (min-aspect-ratio: 16/9) {
-                .video-background iframe {
-                    /* height = 100 * (9 / 16) = 56.25 */
-                    height: 56.25vw;
-                }
-            }
-            @media (max-aspect-ratio: 16/9) {
-                .video-background iframe {
-                    /* width = 100 / (9 / 16) = 177.777777 */
-                    width: 177.78vh;
-                }
-            }
-        </style>
     </head>
-    <body style="">
-        <div class="video-background">
-            <iframe src="https://www.youtube.com/embed/jOBRzhyaG_U?controls=0&autoplay=1" frameborder="0" allow="allowfullscreen"></iframe>
+    <body style="margin: 0px;">
+        <div class="video-background" style="height: 100vh; width: 100vw;">
+            <iframe src="https://www.youtube.com/embed/jOBRzhyaG_U?controls=1&amp;autoplay=1" title="EverChart" frameborder="0" style="width: 100%; height: 100%;"></iframe>
         </div>
     </body>
 </html>
